--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
            <div class="navbar-inner">
             <!-- Nav -->
              <div class="container">
-                <a class="brand" href="../">Coveo 2013</a>
+                <a class="brand" href="#">Coveo 2013</a>
+                <ul class="nav">
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Équipe <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li ng-repeat="member in team"><a href="{{member.url}}" target="blank">{{member.name}}</a></li>
+                    </ul>
+                  </li>
+                </ul>
                 <form class="navbar-search pull-right">
                   <input type="text" class="search-query" placeholder="Recherche..." ng-model="query" speech x-webkit-speech> 
                 </form>
@@ -26,8 +34,14 @@
         <div class="container">
           <div class="row">
             <div class="span3">
-              <!-- Side bar -->              
-              
+              <!-- Side bar --> 
+              <div class="well">
+              <ul class="nav nav-list">
+                <li class="nav-header">Genre<li>
+                <li class="active">Electronica <span class="badge badge-info">3</span><li>
+                <li><a href="#">Rapcore <span class="badge badge-info">2</span></a><li>
+              </ul>   
+              </div>                        
             </div>
             <div class="span9">
               <!-- Content -->
@@ -44,7 +58,6 @@
         <script src="js/services.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/List.js"></script>
-        <script src="js/Search.js"></script>
         <script src="js/Detail.js"></script>
     </body>
 </html>
