--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp" ng-controller="MainCtrl">
+<html lang="en" ng-app="myApp">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
-    <body>       
+    <body ng-controller="MainCtrl">       
          <div class="navbar navbar-fixed-top">
            <div class="navbar-inner">
             <!-- Nav -->
@@ -36,10 +36,12 @@
             <div class="span3">
               <!-- Side bar --> 
               <div class="well">
-              <ul class="nav nav-list">
-                <li class="nav-header">Genre<li>
-                <li class="active">Electronica <span class="badge badge-info">3</span><li>
-                <li><a href="#">Rapcore <span class="badge badge-info">2</span></a><li>
+              <ul class="nav nav-list" ng-repeat="(name, values) in facets">
+                <li class="nav-header">{{getFacetName(name)}}<li>
+                <!-- TODO: class="active" -->
+                <li ng-repeat="(value, count) in values">
+                  {{value}} <span class="badge badge-info">{{count}}</span>
+                </li>
               </ul>   
               </div>                        
             </div>
@@ -53,10 +55,8 @@
         <script src="lib/jquery.min.js"></script>
         <script src="lib/bootstrap.min.js"></script>
         <script src="lib/angular/angular.min.js"></script>
-        <script src="lib/angular/angular-resource.min.js"></script>
         <script src="js/app.js"></script>
-        <script src="js/services.js"></script>
-        <script src="js/controllers.js"></script>
+        <script src="js/Main.js"></script>
         <script src="js/List.js"></script>
         <script src="js/Detail.js"></script>
     </body>
