--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <div class="navbar-inner">
             <!-- Nav -->
              <div class="container">
-                <a class="brand" href="#">Coveo 2013</a>
+                <a class="brand" href="#">Covemifasol</a>
                 <ul class="nav">
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Équipe <b class="caret"></b></a>
@@ -25,7 +25,7 @@
                   </li>
                 </ul>
                 <form class="navbar-search pull-right">
-                  <input type="text" class="search-query" placeholder="Recherche..." ng-model="query" speech x-webkit-speech> 
+                  <input type="text" class="search-query" placeholder="Recherche..." speech x-webkit-speech ng-model="query" ng-change="fetch()"> 
                 </form>
              </div>
            </div>
@@ -38,10 +38,12 @@
               <div class="well">
               <ul class="nav nav-list" ng-repeat="(name, values) in facets">
                 <li class="nav-header">{{getFacetName(name)}}<li>
-                <!-- TODO: class="active" -->
-                <li ng-repeat="(value, count) in values">
-                  {{value}} <span class="badge badge-info">{{count}}</span>
+                <li ng-repeat="(value, count) in values" ng-class="{active: selectedFacets[name].indexOf(value) >= 0}">
+                  <a ng-click="selectFacet(name, value)">
+                  {{value | firstCap}} <span class="badge badge-info">{{count}}</span>
+                  </a>
                 </li>
+                <li class="divider"></li>
               </ul>   
               </div>                        
             </div>
@@ -56,6 +58,8 @@
         <script src="lib/bootstrap.min.js"></script>
         <script src="lib/angular/angular.min.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/directives.js"></script>
+        <script src="js/filters.js"></script>
         <script src="js/Main.js"></script>
         <script src="js/List.js"></script>
         <script src="js/Detail.js"></script>
